Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90442

QFileDialog::saveFileContent crashes on accept

    XMLWordPrintable

Details

    • Windows
    • af738780d3efea14733c5a3b5540fa715cd6bca6 (qt/qtbase/dev) f7d8bb2e5c (qt/tqtc-qtbase/5.15) f7d8bb2e5c (qt/tqtc-qtbase/tqtc/vxworks-5.15.10)

    Description

      QFileDialog::saveFileContent crashes on Windows when I close it.

      This is probably due to connecting finished to a lambda which deletes it immediately in QFileDialog::saveFileContent (qfiledialog.cpp). However, after the finished signal is emitted the dialog is still used. Thus the recommendation for signals is usually to use deleteLater in slots instead of delete to avoid such issues.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            alexj Alexander Jährling
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes