QFileDialog::saveFileContent crashes on accept

When using QFileDialog::saveFileCOntent, there is a risk of crash.

Using deleteLater in the dialogClosed lambda in QFileDialog::saveFileContent

Pick-to: 5.15
Fixes: QTBUG-90442
Change-Id: I200ccda9d973af2fa9b6ce9d72a518b154ef2019
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>